magento/magento2#23502: Help tooltip icon extra space issue
- fixed space tooltips in admin magento

--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/actions-bar/_store-switcher.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/actions-bar/_store-switcher.less
@@ -15,6 +15,12 @@
     font-size: round(@font-size__base - .1rem, 1);
     margin-top: .59rem;
 
+    button{
+        &.admin__action-dropdown{
+            margin-right: -10px;
+        }
+    }
+
     .admin__action-dropdown {
         background-color: @page-main-actions__background-color;
         margin-left: .5em;
